# dart-c-rust

./: .clang-format  .gitignore  Makefile  README.md  hashmap.c  hashmap.dart  hashmap.h  hashmap_bindings.dart  pubspec.yaml
pointer/: Cargo.toml  cbindgen.toml  hashmap.h
pointer/src/: lib.rs
