[package]
name = "pointer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true          # Link Time Optimization, reduces overall size
panic = 'abort'
