[package]
name = "pointer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
libc = "0.2"
bincode = "1.3.3"
serde = { version = "1.0.160", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true          # Link Time Optimization, reduces overall size
panic = 'abort'
